# rustcord

./: Cargo.toml
src/: discord.rs  main.rs  state.rs
src/discord/: client.rs  util.rs
