[package]
name = "discord-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.16"
http = "0.2"
tokio = { version = "1.8", features = ["full"] }
futures = "0.3"
twilight-cache-inmemory = { version = "0.5", default-features = true }
twilight-gateway = { version = "0.5", default-features = true }
twilight-http = { version = "0.5", default-features = true }
twilight-model = { version = "0.5", default-features = true }