[package]
name = "discord-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
http = "0.2"
futures = "0.3"
tokio = { version = "1.8", features = ["full"] }
twilight-cache-inmemory = { version = "0.5", default-features = true }
twilight-gateway = { version = "0.5", default-features = true }
twilight-http = { version = "0.5", default-features = true }
twilight-model = { version = "0.5", default-features = true }